Bug 1837824 - Nightly fails to start in macOS Sonoma virtual machine r=jrmuizel,haik

Adds a search for AppleParavirtGPUs found on macOS virtual machines.

Contributed by ran1@fastlizard4.org.

Differential Revision: https://phabricator.services.mozilla.com/D186081